<resources>
    <string name="app_name">MAttS</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="logo" />
    <string name="username">Username</string>
    <string name="password">password</string>
    <string name="login">LOGIN</string>
    <string name="Signup">SIGN UP</string>
    <string name="email">Email</string>

    <string name="note">Notes</string>
    <string name="enroll">Enroll students</string>
    <string name="attend">Attendance</string>
    <string name="title_activity_enrollment"/>
    <string name="studentname">Student Name</string>
    <string name="rollno">Roll No</string>
    <string name="parentsno">Parents Number</string>
    <string name="studentsno">Students Number</string>
    <string name="edit">EDIT</string>
    <string name="title_activity_notes"/>
    <string name="title">Title:</string>
    <string name="save">Save</string>
    <string name="h">Write your important notes here</string>
    <string name="title_activity_attendance1"/>


    <string name="teachers"> Select Teachers Name</string>
    <string name="subjectlist">Select Subject</string>
    <string name="date">Date</string>
    <string name="takeattendance">Take Attendance</string>
    <string name="classlist">Select Class</string>

    //drop down list for teachers name
    <string-array name="teachersname">
        <item>Select teacher name</item>
        <item>ABC</item>
        <item>XYZ</item>
        <item>PQR</item>
        <item>EFG</item>
        <item>IJK</item>
    </string-array>

    //dropdown list for subjects
    <string-array name="subject">
        <item>Select Subject</item>
        <item>Operating system</item>
        <item>Java</item>
        <item>Software Engineering</item>
        <item>Computer security</item>
    </string-array>


    <string-array name="classdropdown">
        <item>Select Class</item>
        <item>Fy</item>
        <item>Sy</item>
        <item>Ty</item>
    </string-array>
    <string name="title_activity_mainscreenmatts"/>
    <string name="title_activity_average"/>

    <string name="savg">Student average</string>
    <string name="cavg">class average</string>

</resources>

