<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.sheshnath08.matts.notesActivity"
    tools:showIn="@layout/activity_notes">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/h"
        android:id="@+id/heading"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/write"
        android:layout_below="@+id/heading"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/title"
        android:hint="@string/title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/note1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/write" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnsave"
        android:layout_marginTop="101dp"
        android:layout_below="@+id/note1"
        android:layout_alignRight="@+id/note1"
        android:layout_alignEnd="@+id/note1"
        android:background="#703f51b5" />


</RelativeLayout>
